--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
+    "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "author": "Amin",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "concat": "^1.0.3",
     "node-sass": "^8.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0"
   }
 }
